# dollgen

./: .gitignore  Cargo.toml  README.doll  devenv.nix  rustfmt.toml
examples/: example.rs
examples/src/: liquid.useliquid.doll  standalone.page.liquid  standalonejinja.page.jinja  standaloneliquid.page.liquid  style.scss
examples/src/blog/: pretty-normal.doll  special-page.doll  special-page.liquid  this-is-a-draft-page.draft.doll
examples/src/functional-place/: index.html
examples/src/functional-place/the-code/: .build-wasm  Cargo.toml
examples/src/functional-place/the-code/src/: lib.rs
examples/templates/: awa.jinja  blog.liquid  page.jinja  page.liquid  waw.jinja
src/: lib.rs  util.rs
src/lang/: markdoll.rs  mod.rs
src/liquid/: fs_partials.rs  markdoll.rs  mod.rs
src/minijinja/: mod.rs
src/scss/: mod.rs
src/wasm/: mod.rs
