[package]
name = "dollgen"
version = "0.1.0"
edition = "2021"

[dependencies]
capturing-glob = "0.1.1"
strfmt = "0.2.4"
thiserror = "2.0.3"
anyhow = "1.0.93"
codemap = "0.1.3"

liquid = { version = "0.26.9", optional = true }
toml = { version = "0.8.19", optional = true }
serde = { version = "1.0.214", optional = true }

markdoll = { version = "2.0.1", features = ["ariadne"], optional = true }
ariadne = { version = "0.4.1", optional = true }
hashbrown = { version = "0.14.5", optional = true }

grass = { version = "0.13.4", optional = true }

[features]
default = []

liquid = ["dep:liquid", "dep:toml", "dep:serde"]
liquid-markdoll = ["dep:markdoll", "dep:ariadne", "dep:hashbrown", "liquid"]

scss = ["dep:grass"]