[package]
name = "dollgen"
version = "0.3.0"
authors = ["0x57e11a"]
edition = "2021"
description = "an unopinionated and extensible Static Site Generator, natively supporting liquid, markdoll, scss, and compiling rust to wasm"
readme = "README.doll"
repository = "https://codeberg.org/0x57e11a/dollgen"
rust-version = "1.81"
license = "MIT"
keywords = ["web", "ssg", "wasm", "webassembly", "text"]
categories = ["web-programming", "wasm"]
publish = false # todo

[dependencies]
capturing-glob = "0.1.1"
strfmt = "0.2.4"
thiserror = "2.0.6"
miette = "7.4.0"
anyhow = "1.0.93"
tracing = "0.1.41"
tyfling = "0.1.2"

serde = { version = "1.0.214", features = ["derive"], optional = true }
toml = { version = "0.8.19", optional = true }
hashbrown = { version = "0.14.5", optional = true }
convert_case = { version = "0.6.0", optional = true }

liquid = { version = "0.26.9", optional = true }

minijinja = { version = "2.6.0", features = ["loader"], optional = true }

#markdoll = { version = "3.0.3", optional = true }
markdoll = { path = "../markdoll", optional = true } # todo

grass = { version = "0.13.4", optional = true }

wasm-bindgen-cli-support = { version = "0.2.95", optional = true }

[features]
default = []

liquid = ["dep:liquid", "dep:toml", "dep:serde"]

minijinja = ["dep:minijinja", "dep:toml", "dep:serde"]

scss = ["dep:grass"]

wasm = ["dep:convert_case", "dep:toml", "dep:wasm-bindgen-cli-support"]

lang-markdoll = ["dep:markdoll", "dep:hashbrown"]

all = ["liquid", "minijinja", "scss", "wasm", "lang-markdoll"]

[[example]]
name = "example"
required-features = ["all"]

[workspace]
members = ["examples/src/functional-place/the-code"]
resolver = "2"
